Finally fixed the stupid navbar and spring security issues.

--- a/src/main/resources/static/newscache/template/navbar.html
+++ b/src/main/resources/static/newscache/template/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="naviagtion" style="border-radius: 0;padding-left: 20%; padding-right: 20%" ng-show="vm.visible">
+<nav class="navbar navbar-default navbar-fixed-top" role="naviagtion" style="border-radius: 0;padding-left: 20%; padding-right: 20%">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed burger-button" data-toggle="collapse" data-target="#navbar">
